<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#16181D" >

            <ImageView
                android:id="@+id/login_user_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/content_description"
                android:padding="10dp"
                android:src="@drawable/ic_profile_followers" >
            </ImageView>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2D3239"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#A6A6A6"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:background="#16181D" >

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/content_description"
                android:padding="10dp"
                android:src="@drawable/ic_profile_heart" >
            </ImageView>

            <EditText
                android:id="@+id/passworld"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2D3239"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#A6A6A6"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:background="#3A93E1"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold" >
        </Button>

        <TextView
            android:id="@+id/register_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/login_register_link"
            android:textColor="#A6A6A6"
            android:textColorLink="#FF0066CC"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>