<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginRight="8dp"
    android:layout_marginTop="42dp"
    android:background="@drawable/title_function_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/llayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/title_list_selector"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/head_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/head_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/head_icon"
            android:layout_toRightOf="@id/head_icon"
            android:gravity="center"
            android:padding="4dp"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/head_name"
            android:layout_toRightOf="@id/head_icon"
            android:gravity="center"
            android:padding="4dp"
            android:text=""
            android:textColor="#fff"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="160dp"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:background="#F0F8FF" />

    <LinearLayout
        android:id="@+id/llayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/title_list_selector" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_collection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/function_list_collection"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="160dp"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:background="#F0F8FF" />

    <LinearLayout
        android:id="@+id/llayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/title_list_selector" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_draft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/function_list_draft"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="160dp"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:background="#F0F8FF" />

    <LinearLayout
        android:id="@+id/llayout04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/title_list_selector" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/function_list_settings"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="160dp"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:background="#F0F8FF" />

    <LinearLayout
        android:id="@+id/llayout05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/title_list_selector" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/function_list_exit"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>